// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component Snapshot Modal 1`] = `
<DocumentFragment>
  .c6 {
  width: 100%;
  height: 50px;
  font-weight: 700;
  border: none;
  border-radius: 5px;
  background: none;
  cursor: pointer;
  transition: all 0.2s;
  max-width: 200px;
}

.c6:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c7 {
  border: 2px solid #0353A4;
  color: #0353A4;
}

.c7:not(:disabled):hover {
  border-color: #034C95;
  background-color: #0353A4;
  color: #FFF;
}

.c8 {
  border: 2px solid #3F9D50;
  background-color: #3F9D50;
  color: #FFF;
}

.c8:not(:disabled):hover {
  border-color: #398F49;
  background-color: #398F49;
  color: #FFF;
}

.c1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem;
  font-size: 1.25rem;
  border-radius: 10px;
  background-color: #F8F8F8;
  margin: auto;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.43);
  display: flex;
  justify-content: center;
  align-items: center;
}

.c5 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  margin: 1.75rem 0;
  text-align: center;
  color: #6B6B6B;
  font-size: 1rem;
}

.c3 {
  font-size: 1.8125rem;
  color: #4E4E4E;
}

.c2 {
  background-color: white;
  width: 100%;
  max-width: 620px;
  overflow: auto;
}

<div
    class="c0"
    role="backdrop"
  >
    <div
      class="c1 c2"
      role="modal"
    >
      <h2
        class="c3"
      >
        Atenção!
      </h2>
      <div
        class="c4"
      >
        <h1>
          Teste
        </h1>
      </div>
      <div
        class="c5"
      >
        <button
          class="c6 c7"
        >
          <span>
            Cancelar
          </span>
        </button>
        <button
          class="c6 c8"
        >
          <span>
            Confirmar
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Component Snapshot Modal with variant form 1`] = `
<DocumentFragment>
  .c9 {
  width: 100%;
  height: 50px;
  font-weight: 700;
  border: none;
  border-radius: 5px;
  background: none;
  cursor: pointer;
  transition: all 0.2s;
  max-width: 200px;
}

.c9:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c11 {
  background-color: #0353A4;
  color: #FFF;
}

.c11:not(:disabled):hover {
  background-color: #034C95;
}

.c10 {
  border: 2px solid #0353A4;
  color: #0353A4;
}

.c10:not(:disabled):hover {
  border-color: #034C95;
  background-color: #0353A4;
  color: #FFF;
}

.c5 {
  color: #0353A4;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 100%;
  width: fit-content;
  width: -moz-fit-content;
  height: fit-content;
  height: -moz-fit-content;
}

.c4 {
  width: 70px;
  height: 70px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #E6EEF6;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
}

.c1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem;
  font-size: 1.25rem;
  border-radius: 10px;
  background-color: #F8F8F8;
  margin: auto;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.43);
  display: flex;
  justify-content: center;
  align-items: center;
}

.c8 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  margin: 1.75rem 0;
  text-align: center;
  color: #6B6B6B;
  font-size: 1rem;
}

.c3 {
  width: 100%;
  display: flex;
  align-items: center;
  gap: 1.75rem;
}

.c2 {
  background-color: white;
}

<div
    class="c0"
    role="backdrop"
  >
    <div
      class="c1 c2"
      role="modal"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
              data-testid="ph-user"
            >
              <svg
                fill="currentColor"
                height="47"
                viewBox="0 0 256 256"
                width="47"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
                />
              </svg>
            </div>
          </div>
        </div>
        <h1>
          Modal Content
        </h1>
      </div>
      <div
        class="c7"
      >
        <h1>
          Modal Content
        </h1>
      </div>
      <div
        class="c8"
      >
        <button
          class="c9 c10"
        >
          <span>
            Cancelar
          </span>
        </button>
        <button
          class="c9 c11"
        >
          <span>
            Confirmar
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Component Snapshot Modal with variant warning 1`] = `
<DocumentFragment>
  .c5 {
  width: 100%;
  height: 50px;
  font-weight: 700;
  border: none;
  border-radius: 5px;
  background: none;
  cursor: pointer;
  transition: all 0.2s;
  max-width: 200px;
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c6 {
  border: 2px solid #0353A4;
  color: #0353A4;
}

.c6:not(:disabled):hover {
  border-color: #034C95;
  background-color: #0353A4;
  color: #FFF;
}

.c7 {
  border: 2px solid #CE323B;
  background-color: #CE323B;
  color: #FFF;
}

.c7:not(:disabled):hover {
  border-color: #BB2E36;
  background-color: #BB2E36;
  color: #FFF;
}

.c1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem;
  font-size: 1.25rem;
  border-radius: 10px;
  background-color: #F8F8F8;
  margin: auto;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.43);
  display: flex;
  justify-content: center;
  align-items: center;
}

.c4 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  margin: 1.75rem 0;
  text-align: center;
  color: #6B6B6B;
  font-size: 1rem;
}

.c2 {
  background-color: white;
  width: 100%;
  max-width: 620px;
  overflow: auto;
}

<div
    class="c0"
    role="backdrop"
  >
    <div
      class="c1 c2"
      role="modal"
    >
      <h2>
        Atenção!
      </h2>
      <div
        class="c3"
      >
        <h1>
          Teste
        </h1>
      </div>
      <div
        class="c4"
      >
        <button
          class="c5 c6"
        >
          <span>
            Cancelar
          </span>
        </button>
        <button
          class="c5 c7"
        >
          <span>
            Excluir
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
